--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+
+        <header>
+            <button id="search-bar"></button>
+            <button id="bell"></button>
+            <img src="" alt="profile picture">
+            <p>Morgan Oakley</p>
+        </header>
+
+        <nav>
+            <a href="">Home</a>
+            <a href="">Profile</a>
+            <a href="">Messages</a>
+            <a href="">History</a>
+            <a href="">Tasks</a>
+            <a href="">Communities</a>
+
+            <a href="">Settings</a>
+            <a href="">Support</a>
+            <a href="">Privacy</a>
+        </nav>
+
+        <div class="projects">
+            <h3>Your projects</h3>
+
+            <div class="card">
+                <a href="" class="project-link">Super Cool project</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum quibusdam corrupti blanditiis laborum facere impedit quisquam incidunt ab minus voluptatibus soluta aspernatur, ratione dicta voluptatum? Consequatur sequi provident quas?</p>
+            </div>
+
+            <div class="card">
+                <a href="" class="project-link">Less Cool Project</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum quibusdam corrupti blanditiis laborum facere impedit quisquam incidunt ab minus voluptatibus soluta aspernatur, ratione dicta voluptatum? Consequatur sequi provident quas?</p>
+            </div>
+        </div>
+
+        <div class="announcements">
+
+        </div>
+
+        <div class="trending">
+
+        </div>
+
+    </div>
 </body>
 </html>
