--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    
+
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
 
@@ -30,28 +32,35 @@
             <a href="">Privacy</a>
         </nav>
 
-        <div class="projects">
-            <h3>Your projects</h3>
+        <section>
+            <div class="projects">
+                <h3>Your projects</h3>
 
-            <div class="card">
-                <a href="" class="project-link">Super Cool project</a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum quibusdam corrupti blanditiis laborum facere impedit quisquam incidunt ab minus voluptatibus soluta aspernatur, ratione dicta voluptatum? Consequatur sequi provident quas?</p>
+                <div class="card">
+                    <a href="" class="project-link">Super Cool project</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum quibusdam corrupti
+                        blanditiis laborum facere impedit quisquam incidunt ab minus voluptatibus soluta aspernatur,
+                        ratione dicta voluptatum? Consequatur sequi provident quas?</p>
+                </div>
+
+                <div class="card">
+                    <a href="" class="project-link">Less Cool Project</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum quibusdam corrupti
+                        blanditiis laborum facere impedit quisquam incidunt ab minus voluptatibus soluta aspernatur,
+                        ratione dicta voluptatum? Consequatur sequi provident quas?</p>
+                </div>
             </div>
 
-            <div class="card">
-                <a href="" class="project-link">Less Cool Project</a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio rerum quibusdam corrupti blanditiis laborum facere impedit quisquam incidunt ab minus voluptatibus soluta aspernatur, ratione dicta voluptatum? Consequatur sequi provident quas?</p>
+            <div class="announcements">
+
             </div>
-        </div>
 
-        <div class="announcements">
+            <div class="trending">
 
-        </div>
-
-        <div class="trending">
-
-        </div>
+            </div>
+        </section>
 
     </div>
 </body>
+
 </html>
